src/styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --text: 0 0% 100%;
    --background: 180, 3%, 11%;
    --foreground: 180, 3%, 95%;

    --card: 0 0% 100%;
    --card-foreground: 0 0% 3.9%;

    --popover: 180, 3%, 11%;
    --popover-foreground: 180, 3%, 95%;

    --primary: 43 96% 56%;
    --primary-foreground: 43, 96%, 2%;

    --secondary: 0 0% 96.1%;
    --secondary-foreground: 0 0% 9%;

    --muted: 180, 3%, 12.6%;
    --muted-foreground: 0 0% 45.1%;

    --accent: 172 66% 50%;
    --accent-foreground: 172 66% 2%;

    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 0 0% 98%;

    --border: 169, 9%, 36%;
    --input: 43 96% 56%;
    --ring: 43 96% 56%;

    --radius: 0.75rem;
  }

  .dark {
    --background: 0 0% 3.9%;
    --foreground: 0 0% 98%;

    --card: 0 0% 3.9%;
    --card-foreground: 0 0% 98%;

    --popover: 0 0% 3.9%;
    --popover-foreground: 0 0% 98%;

    --primary: 0 0% 98%;
    --primary-foreground: 0 0% 9%;

    --secondary: 0 0% 14.9%;
    --secondary-foreground: 0 0% 98%;

    --muted: 0 0% 14.9%;
    --muted-foreground: 0 0% 63.9%;

    --accent: 172, 66%, 50%;
    --accent-foreground: 0 0% 98%;

    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 0 0% 98%;

    --border: 0 0% 14.9%;
    --input: 0 0% 14.9%;
    --ring: 0 0% 83.1%;
  }
}

@layer base {
  * {
    @apply border-border;
  }

  body {
    @apply bg-background text-foreground;
  }

  .title {
    @apply font-semibold text-lg md:text-2xl lg:text-3xl
  }

  .subtitle {
    @apply font-semibold text-base md:text-xl lg:text-2xl
  }

  .base {
    @apply text-sm md:text-base
  }

  .clarification {
    @apply text-xs md:text-sm opacity-60
  }

  .card {
    @apply border border-border rounded-sm px-4 py-7 md:px-7 md:py-10
  }

  .list {
    @apply list-disc pl-6 marker:text-primary
  }

}

.grid-cols-mainLayout>* {
  grid-column-start: 2;
  grid-column-end: -2;
}

.content strong {
  color: hsla(var(--accent));
}

.content a {
  color: hsla(var(--accent));
  text-decoration: underline;
}

.content p+p {
  margin-top: 1em;
}

